# fighter-iq

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  USAGE.md  justfile  pyproject.toml  sr.yaml  teasr.toml
.github/workflows/: ci.yml  release.yml
skills/fight-analyzer/: SKILL.md
skills/fighter-iq/: SKILL.md
src/fight_analyzer/: __init__.py  cli.py  commentary.py  detector.py  event_stream.py  pipeline.py  renderer.py  review_ui.py  spatial.py  summarizer.py  tts.py  ui.py  visualizer.py
src/fighter_iq/: __init__.py  analyzer.py  cli.py  commentary.py  detector.py  event_stream.py  extractor.py  models.py  personas.py  pipeline.py  protocols.py  renderer.py  review_ui.py  shutdown.py  spatial.py  summarizer.py  tts.py  ui.py  visualizer.py
src/fighter_iq/services/: __init__.py  agent.py  embedder.py  ingestor.py  strategy.py
src/mma_ai_coach/: __init__.py  analyzer.py  cli.py  commentary.py  detector.py  event_stream.py  pipeline.py  renderer.py  review_ui.py  spatial.py  summarizer.py  tts.py  visualizer.py
